Still fixing dqn_qm

--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,13 +1859,14 @@
     "        self.fc1_1 = nn.Linear(10, 16) # 5 Nodes status (CPU, Memory)\n",
     "        self.fc1_2 = nn.Linear(2, 16)   # Pod quota (CPU, Memory)\n",
     "        self.fc1_3 = nn.Linear(5, 16)  # Node difference (CPU, Memory)\n",
-    "        self.fc1_4 = nn.Linear(5, 16) # If the node can deploy the pod\n",
+    "        # self.fc1_4 = nn.Linear(5, 16) # If the node can deploy the pod\n",
     "        self.fc2_1 = nn.Linear(16, 8)\n",
     "        self.fc2_2 = nn.Linear(16, 8)\n",
     "        self.fc2_3 = nn.Linear(16, 8)\n",
-    "        self.fc2_4 = nn.Linear(16, 8)\n",
+    "        # self.fc2_4 = nn.Linear(16, 8)\n",
     "\n",
-    "        self.fc3 = nn.Linear(32, 16)    # Concatenated vector\n",
+    "        self.fc3 = nn.Linear(24, 16)\n",
+    "        # self.fc3 = nn.Linear(32, 16)    # Concatenated vector\n",
     "        self.fc4 = nn.Linear(16, 16)    # Last layer of FE_net\n",
     "\n",
     "    def forward(self, x):\n",
@@ -1873,25 +1874,26 @@
     "        x2 = x[:, 10:]\n",
     "        x3 = x1[:, ::2] - x1[:, 1::2] # Takes the difference of x1's odd and even columns\n",
     "\n",
-    "        # Duplicte x2 5 times horizontally\n",
-    "        x2_ = x2.repeat(1, 5).view(-1, 10)\n",
-    "        x4_ = (1-x1) - x2_ >= 0\n",
-    "        x4 = x4_[:, ::2] * x4_[:, 1::2]\n",
-    "        # Convert boolean to float\n",
-    "        x4 = x4.type(torch.FloatTensor)\n",
-    "        # print(f\"x4 : {x4}\")\n",
+    "        # # Duplicte x2 5 times horizontally\n",
+    "        # x2_ = x2.repeat(1, 5).view(-1, 10)\n",
+    "        # x4_ = (1-x1) - x2_ >= 0\n",
+    "        # x4 = x4_[:, ::2] * x4_[:, 1::2]\n",
+    "        # # Convert boolean to float\n",
+    "        # x4 = x4.type(torch.FloatTensor)\n",
+    "        # # print(f\"x4 : {x4}\")\n",
     "\n",
     "        x1 = F.relu(self.fc1_1(x1))  \n",
     "        x2 = F.relu(self.fc1_2(x2))\n",
     "        x3 = F.relu(self.fc1_3(x3))\n",
-    "        x4 = F.relu(self.fc1_4(x4))\n",
+    "        # x4 = F.relu(self.fc1_4(x4))\n",
     "\n",
     "        x1 = F.relu(self.fc2_1(x1))\n",
     "        x2 = F.relu(self.fc2_2(x2))\n",
     "        x3 = F.relu(self.fc2_3(x3))\n",
-    "        x4 = F.relu(self.fc2_4(x4))\n",
+    "        # x4 = F.relu(self.fc2_4(x4))\n",
     "\n",
-    "        x = torch.cat((x1, x2, x3, x4), dim=1)\n",
+    "        x = torch.cat((x1, x2, x3), dim=1)\n",
+    "        # x = torch.cat((x1, x2, x3, x4), dim=1)\n",
     "        x = F.relu(self.fc3(x))\n",
     "        x = self.fc4(x)\n",
     "        return x"
@@ -1899,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1938,12 +1940,10 @@
        "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
        "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
        "      (fc1_3): Linear(in_features=5, out_features=16, bias=True)\n",
-       "      (fc1_4): Linear(in_features=5, out_features=16, bias=True)\n",
        "      (fc2_1): Linear(in_features=16, out_features=8, bias=True)\n",
        "      (fc2_2): Linear(in_features=16, out_features=8, bias=True)\n",
        "      (fc2_3): Linear(in_features=16, out_features=8, bias=True)\n",
-       "      (fc2_4): Linear(in_features=16, out_features=8, bias=True)\n",
-       "      (fc3): Linear(in_features=32, out_features=16, bias=True)\n",
+       "      (fc3): Linear(in_features=24, out_features=16, bias=True)\n",
        "      (fc4): Linear(in_features=16, out_features=16, bias=True)\n",
        "    )\n",
        "    (q_net): Sequential(\n",
@@ -1959,12 +1959,10 @@
        "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
        "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
        "      (fc1_3): Linear(in_features=5, out_features=16, bias=True)\n",
-       "      (fc1_4): Linear(in_features=5, out_features=16, bias=True)\n",
        "      (fc2_1): Linear(in_features=16, out_features=8, bias=True)\n",
        "      (fc2_2): Linear(in_features=16, out_features=8, bias=True)\n",
        "      (fc2_3): Linear(in_features=16, out_features=8, bias=True)\n",
-       "      (fc2_4): Linear(in_features=16, out_features=8, bias=True)\n",
-       "      (fc3): Linear(in_features=32, out_features=16, bias=True)\n",
+       "      (fc3): Linear(in_features=24, out_features=16, bias=True)\n",
        "      (fc4): Linear(in_features=16, out_features=16, bias=True)\n",
        "    )\n",
        "    (q_net): Sequential(\n",
@@ -1978,7 +1976,7 @@
        ")"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,17 +1997,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1132,  0.0078,  0.0370,  0.0050, -0.0351, -0.0203]],\n",
+       "tensor([[-0.0302, -0.0928, -0.0139, -0.0749,  0.1131, -0.0629]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2020,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2037,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2105,26 @@
      "text": [
       "Epoch 1: Train Loss: 0.0060, Train Acc: 68.59%, Test Loss: 0.0039, Test Acc: 72.20%\n",
       "Epoch 2: Train Loss: 0.0037, Train Acc: 74.28%, Test Loss: 0.0035, Test Acc: 75.66%\n",
-      "Epoch 3: Train Loss: 0.0034, Train Acc: 75.43%, Test Loss: 0.0033, Test Acc: 76.20%\n"
+      "Epoch 3: Train Loss: 0.0034, Train Acc: 75.43%, Test Loss: 0.0033, Test Acc: 76.20%\n",
+      "Epoch 4: Train Loss: 0.0033, Train Acc: 76.11%, Test Loss: 0.0032, Test Acc: 77.03%\n",
+      "Epoch 5: Train Loss: 0.0032, Train Acc: 76.82%, Test Loss: 0.0031, Test Acc: 77.52%\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m test_acc \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, epochs\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     train_loss, train_acc \u001b[39m=\u001b[39m train(dqn_qm_model, train_pr_dataloader, criterion, optimizer)\n\u001b[1;32m      5\u001b[0m     test_loss, test_acc \u001b[39m=\u001b[39m test(dqn_qm_model, test_pr_dataloader, criterion)\n\u001b[1;32m      6\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Train Loss: \u001b[39m\u001b[39m{\u001b[39;00mtrain_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Train Acc: \u001b[39m\u001b[39m{\u001b[39;00mtrain_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%, Test Loss: \u001b[39m\u001b[39m{\u001b[39;00mtest_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Test Acc: \u001b[39m\u001b[39m{\u001b[39;00mtest_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[56], line 5\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, criterion, optimizer)\u001b[0m\n\u001b[1;32m      3\u001b[0m train_loss \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      4\u001b[0m correct \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfor\u001b[39;00m state, target \u001b[39min\u001b[39;00m train_loader:\n\u001b[1;32m      6\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m      7\u001b[0m     output \u001b[39m=\u001b[39m model(state)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/dataloader.py:681\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    678\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    679\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    680\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 681\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    682\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    683\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    684\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    685\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/dataloader.py:721\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    719\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    720\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 721\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    722\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    723\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
+      "Cell \u001b[0;32mIn[7], line 23\u001b[0m, in \u001b[0;36mPr_Dataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, idx):\n\u001b[0;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput[idx], \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlabel[idx]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
