--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -1847,15 +1847,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "class FE_QM_net(BaseFeaturesExtractor):\n",
+    "class FE_TM_net(BaseFeaturesExtractor):\n",
     "    def __init__(self, observation_space: spaces.Box, features_dim: int = 16):\n",
-    "        super(FE_QM_net, self).__init__(observation_space, features_dim)\n",
+    "        super(FE_TM_net, self).__init__(observation_space, features_dim)\n",
     "        self.fc1_1 = nn.Linear(10, 16) # 5 Nodes status (CPU, Memory)\n",
     "        self.fc1_2 = nn.Linear(2, 16)   # Pod quota (CPU, Memory)\n",
     "        self.fc1_3 = nn.Linear(5, 16)  # Node difference (CPU, Memory)\n",
@@ -1901,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1914,7 @@
    ],
    "source": [
     "policy_kwargs = dict(\n",
-    "    features_extractor_class=FE_QM_net,\n",
+    "    features_extractor_class=FE_TM_net,\n",
     "    features_extractor_kwargs=dict(features_dim=16),\n",
     "    net_arch=[80, 80]\n",
     ")\n",
@@ -1928,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1934,7 @@
       "text/plain": [
        "DQNPolicy(\n",
        "  (q_net): QNetwork(\n",
-       "    (features_extractor): FE_QM_net(\n",
+       "    (features_extractor): FE_TM_net(\n",
        "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
        "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
        "      (fc1_3): Linear(in_features=5, out_features=16, bias=True)\n",
@@ -1955,7 +1953,7 @@
        "    )\n",
        "  )\n",
        "  (q_net_target): QNetwork(\n",
-       "    (features_extractor): FE_QM_net(\n",
+       "    (features_extractor): FE_TM_net(\n",
        "      (fc1_1): Linear(in_features=10, out_features=16, bias=True)\n",
        "      (fc1_2): Linear(in_features=2, out_features=16, bias=True)\n",
        "      (fc1_3): Linear(in_features=5, out_features=16, bias=True)\n",
@@ -1976,7 +1974,7 @@
        ")"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,27 +1985,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# model_ppo_mm_ut_dynamic\n",
-    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_qm_ut_dynamic'))"
+    "rl_model.save(os.path.join(base_path, 'notebook', 'net_arch', 'model_dqn_tm_ut_dynamic'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0302, -0.0928, -0.0139, -0.0749,  0.1131, -0.0629]],\n",
+       "tensor([[ 0.0567, -0.0286, -0.0869, -0.0466, -0.0994, -0.0755]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,14 +2016,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model containing features_extractor, mlp_extractor.policy_net, action_net\n",
-    "class DQN_QM_net(nn.Module):\n",
+    "class DQN_TM_net(nn.Module):\n",
     "    def __init__(self, original_model):\n",
-    "        super(DQN_QM_net, self).__init__()\n",
+    "        super(DQN_TM_net, self).__init__()\n",
     "        self.q_net = original_model.policy.q_net\n",
     "\n",
     "    def forward(self, x):\n",
@@ -2035,16 +2033,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dqn_qm_model = DQN_QM_net(rl_model)"
+    "dqn_tm_model = DQN_TM_net(rl_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,12 +2051,12 @@
     "\n",
     "# Predict 6 vectors (6 actions' scores)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(dqn_qm_model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(dqn_tm_model.parameters(), lr=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,44 +2094,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss: 0.0060, Train Acc: 68.59%, Test Loss: 0.0039, Test Acc: 72.20%\n",
-      "Epoch 2: Train Loss: 0.0037, Train Acc: 74.28%, Test Loss: 0.0035, Test Acc: 75.66%\n",
-      "Epoch 3: Train Loss: 0.0034, Train Acc: 75.43%, Test Loss: 0.0033, Test Acc: 76.20%\n",
-      "Epoch 4: Train Loss: 0.0033, Train Acc: 76.11%, Test Loss: 0.0032, Test Acc: 77.03%\n",
-      "Epoch 5: Train Loss: 0.0032, Train Acc: 76.82%, Test Loss: 0.0031, Test Acc: 77.52%\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m test_acc \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, epochs\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m----> 4\u001b[0m     train_loss, train_acc \u001b[39m=\u001b[39m train(dqn_qm_model, train_pr_dataloader, criterion, optimizer)\n\u001b[1;32m      5\u001b[0m     test_loss, test_acc \u001b[39m=\u001b[39m test(dqn_qm_model, test_pr_dataloader, criterion)\n\u001b[1;32m      6\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Train Loss: \u001b[39m\u001b[39m{\u001b[39;00mtrain_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Train Acc: \u001b[39m\u001b[39m{\u001b[39;00mtrain_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%, Test Loss: \u001b[39m\u001b[39m{\u001b[39;00mtest_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m, Test Acc: \u001b[39m\u001b[39m{\u001b[39;00mtest_acc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[56], line 5\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, criterion, optimizer)\u001b[0m\n\u001b[1;32m      3\u001b[0m train_loss \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      4\u001b[0m correct \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfor\u001b[39;00m state, target \u001b[39min\u001b[39;00m train_loader:\n\u001b[1;32m      6\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m      7\u001b[0m     output \u001b[39m=\u001b[39m model(state)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/dataloader.py:681\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    678\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    679\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    680\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 681\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    682\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    683\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    684\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    685\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/dataloader.py:721\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    719\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    720\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 721\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    722\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    723\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/torch/utils/data/_utils/fetch.py:49\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfetch\u001b[39m(\u001b[39mself\u001b[39m, possibly_batched_index):\n\u001b[1;32m     48\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_collation:\n\u001b[0;32m---> 49\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "Cell \u001b[0;32mIn[7], line 23\u001b[0m, in \u001b[0;36mPr_Dataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, idx):\n\u001b[0;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minput[idx], \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlabel[idx]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 50\n",
     "test_acc = 0\n",
     "for epoch in range(1, epochs+1):\n",
-    "    train_loss, train_acc = train(dqn_qm_model, train_pr_dataloader, criterion, optimizer)\n",
-    "    test_loss, test_acc = test(dqn_qm_model, test_pr_dataloader, criterion)\n",
+    "    train_loss, train_acc = train(dqn_tm_model, train_pr_dataloader, criterion, optimizer)\n",
+    "    test_loss, test_acc = test(dqn_tm_model, test_pr_dataloader, criterion)\n",
     "    print(f'Epoch {epoch}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.2f}%, Test Loss: {test_loss:.4f}, Test Acc: {test_acc:.2f}%')\n",
     "    if test_acc > 95:\n",
     "        break"
@@ -2156,8 +2125,8 @@
     }
    ],
    "source": [
-    "rl_model.policy.q_net.load_state_dict(dqn_qm_model.q_net.state_dict())\n",
-    "rl_model.policy.q_net_target.load_state_dict(dqn_qm_model.q_net.state_dict())"
+    "rl_model.policy.q_net.load_state_dict(dqn_tm_model.q_net.state_dict())\n",
+    "rl_model.policy.q_net_target.load_state_dict(dqn_tm_model.q_net.state_dict())"
    ]
   },
   {
