Brace for impact

--- a/notebook/data_generate.ipynb
+++ b/notebook/data_generate.ipynb
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. 6-reward data generation (Competitive)"
+    "## 4. 6-reward data generation (Dynamic2)"
    ]
   },
   {
@@ -431,6 +431,197 @@
     "data_path = os.path.join(base_path, \"dataset\", \"data_drs.csv\")\n",
     "\n",
     "with open(data_path, 'w') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '\\n')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 6-reward data generation (Default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 1000000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_default.csv\")\n",
+    "\n",
+    "with open(data_path, 'w') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. 6-reward data generation (Dynamic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 300000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_dynamic.csv\")\n",
+    "\n",
+    "with open(data_path, 'a ') as f:\n",
     "    for i in tqdm.tqdm(range(data_size)):\n",
     "        env.reset()\n",
     "        state = list(env.random_state_gen())\n",
