Add time penalty

--- a/notebook/new.ipynb
+++ b/notebook/new.ipynb
@@ -1050,7 +1050,7 @@
     "    net_arch=[dict(pi=[64, 32], vf=[64, 32])]\n",
     ")\n",
     "\n",
-    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic_pr.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
     "\n",
     "rl_model = sb3.PPO('MlpPolicy', env, verbose=1, policy_kwargs=policy_kwargs)"
    ]
@@ -1378,7 +1378,7 @@
     "    net_arch=[dict(pi=[64, 32], vf=[64, 32])]\n",
     ")\n",
     "\n",
-    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic2.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic2_pr.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
     "\n",
     "rl_model = sb3.PPO('MlpPolicy', env, verbose=1, policy_kwargs=policy_kwargs)"
    ]
@@ -1706,7 +1706,7 @@
     "    net_arch=[dict(pi=[64, 32], vf=[64, 32])]\n",
     ")\n",
     "\n",
-    "env = gym.make('SimKubeEnv-v0', reward_file='train_default.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_default_pr.py', scenario_file='scenario-5l-5m-1000p-10m_unbalanced.csv')\n",
     "\n",
     "rl_model = sb3.PPO('MlpPolicy', env, verbose=1, policy_kwargs=policy_kwargs)"
    ]
