--- a/notebook/data_generate.ipynb
+++ b/notebook/data_generate.ipynb
@@ -339,28 +339,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1243402113209463"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np.random.random()"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -671,6 +649,345 @@
     "        reward = list(map(lambda x: round(x, 4), reward))\n",
     "        \n",
     "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. 6-reward data generation (Default2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_default2.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 300000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_default2.csv\")\n",
+    "\n",
+    "with open(data_path, 'a') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. 6-reward data generation (Dynamic2_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic2_time.py')\n",
+    "scheduler = SimHrScheduler(env, 'default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 300000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_dynamic2_time.csv\")\n",
+    "\n",
+    "with open(data_path, 'a') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        time = env.time\n",
+    "        # print(f\"State: {state} / Time: {time}\")\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '  ,  ' + str(time) + '\\n')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. 6-reward data generation (Dynamic_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_dynamic_time.py')\n",
+    "scheduler = SimHrScheduler(env, 'default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 3498/300000 [06:15<8:50:20,  9.32it/s] \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 15\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39m# print(f\"State: {state} / Time: {time}\")\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39m# print(f\"State: {state}\")\u001b[39;00m\n\u001b[1;32m     14\u001b[0m env0 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mduplicate() \u001b[39m# For action 0\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m env1 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mduplicate() \u001b[39m# For action 1\u001b[39;00m\n\u001b[1;32m     16\u001b[0m env2 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mduplicate() \u001b[39m# For action 2\u001b[39;00m\n\u001b[1;32m     17\u001b[0m env3 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mduplicate() \u001b[39m# For action 3\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/envs/sim_kube_env.py:62\u001b[0m, in \u001b[0;36mSimKubeEnv.duplicate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mduplicate\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     58\u001b[0m     \u001b[39m# Copy the class ifself, but should be separated from the original one\u001b[39;00m\n\u001b[1;32m     59\u001b[0m     \u001b[39m# This is to prevent the original one from being modified\u001b[39;00m\n\u001b[1;32m     60\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mcopy\u001b[39;00m \u001b[39mimport\u001b[39;00m deepcopy\n\u001b[0;32m---> 62\u001b[0m     new_env \u001b[39m=\u001b[39m SimKubeEnvCopy(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreward_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscenario_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_node, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcpu_pool, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmem_pool, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdebug)\n\u001b[1;32m     63\u001b[0m     new_env\u001b[39m.\u001b[39mcluster \u001b[39m=\u001b[39m deepcopy(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcluster)\n\u001b[1;32m     64\u001b[0m     new_env\u001b[39m.\u001b[39mtime \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/envs/sim_kube_env_copy.py:25\u001b[0m, in \u001b[0;36mSimKubeEnvCopy.__init__\u001b[0;34m(self, reward_file, scenario_file, n_node, cpu_pool, mem_pool, debug)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreward_fn_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreward_file)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     24\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscenario_file \u001b[39m=\u001b[39m scenario_file\n\u001b[0;32m---> 25\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstress_gen \u001b[39m=\u001b[39m SimStressGen(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscenario_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdebug)\n\u001b[1;32m     27\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_node \u001b[39m=\u001b[39m n_node\n\u001b[1;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcpu_pool \u001b[39m=\u001b[39m cpu_pool\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/utils/sim_stress_gen.py:17\u001b[0m, in \u001b[0;36mSimStressGen.__init__\u001b[0;34m(self, scenario_file, debug)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdebug \u001b[39m=\u001b[39m debug\n\u001b[1;32m     16\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscenario_file \u001b[39m=\u001b[39m scenario_file\n\u001b[0;32m---> 17\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscenario \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mload_scenario(scenario_file)\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/utils/sim_stress_gen.py:29\u001b[0m, in \u001b[0;36mSimStressGen.load_scenario\u001b[0;34m(self, scenario_file)\u001b[0m\n\u001b[1;32m     27\u001b[0m     lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m     28\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m lines:\n\u001b[0;32m---> 29\u001b[0m         scenario\u001b[39m.\u001b[39mappend(line\u001b[39m.\u001b[39;49mstrip()\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m,\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39m+\u001b[39;49m [\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m])\n\u001b[1;32m     30\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdebug:\n\u001b[1;32m     31\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m(SimStressGen) Scenario: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m...\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(scenario[:\u001b[39m5\u001b[39m]))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import tqdm\n",
+    "\n",
+    "data_size = 300000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_dynamic_time.csv\")\n",
+    "\n",
+    "with open(data_path, 'a') as f:\n",
+    "    for i in tqdm.tqdm(range(data_size)):\n",
+    "        env.reset()\n",
+    "        state = list(env.random_state_gen())\n",
+    "        time = env.time\n",
+    "        # print(f\"State: {state} / Time: {time}\")\n",
+    "        # print(f\"State: {state}\")\n",
+    "\n",
+    "        env0 = env.duplicate() # For action 0\n",
+    "        env1 = env.duplicate() # For action 1\n",
+    "        env2 = env.duplicate() # For action 2\n",
+    "        env3 = env.duplicate() # For action 3\n",
+    "        env4 = env.duplicate() # For action 4\n",
+    "        env5 = env.duplicate() # For action 5\n",
+    "\n",
+    "        state0, rew0, _, _ = env0.step(0, True)\n",
+    "        # print(f\"Action 0\")\n",
+    "        # print(f\"State0: {state0}\")\n",
+    "        # print(\"====================\")\n",
+    "        state1, rew1, _, _ = env1.step(1, True)\n",
+    "        # print(f\"Action 1\")\n",
+    "        # print(f\"State1: {state1}\") \n",
+    "        # print(\"====================\")\n",
+    "        state2, rew2, _, _ = env2.step(2, True)\n",
+    "        # print(f\"Action 2\")\n",
+    "        # print(f\"State2: {state2}\")\n",
+    "        # print(\"====================\")\n",
+    "        state3, rew3, _, _ = env3.step(3, True)\n",
+    "        # print(f\"Action 3\")\n",
+    "        # print(f\"State3: {state3}\")\n",
+    "        # print(\"====================\")\n",
+    "        state4, rew4, _, _ = env4.step(4, True)\n",
+    "        # print(f\"Action 4\")\n",
+    "        # print(f\"State4: {state4}\")\n",
+    "        # print(\"====================\")\n",
+    "        state5, rew5, _, _ = env5.step(5, True)\n",
+    "        # print(f\"Action 5\")\n",
+    "        # print(f\"State5: {state5}\")\n",
+    "\n",
+    "        reward = [rew0, rew1, rew2, rew3, rew4, rew5]\n",
+    "        # Round up at the 4th decimal point\n",
+    "        reward = list(map(lambda x: round(x, 4), reward))\n",
+    "        \n",
+    "        f.write(','.join(list(map(str,state))) + '  ,  ' + ','.join(list(map(str,reward))) + '  ,  ' + str(time) + '\\n')"
    ]
   },
   {
