--- a/notebook/data_generate.ipynb
+++ b/notebook/data_generate.ipynb
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,17 +991,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make('SimKubeEnv-v0', reward_file='train_step_3.py')\n",
     "scheduler = SimHrScheduler(env, 'default.py')"
@@ -1009,9 +1001,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 48%|████▊     | 479625/1000000 [43:19<47:00, 184.48it/s]  \n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m state \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(env\u001b[39m.\u001b[39mrandom_state_gen())\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(f\"State: {state} / Time: {time}\")\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# print(f\"State: {state}\")\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m env0 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mduplicate() \u001b[39m# For action 0\u001b[39;00m\n\u001b[1;32m     14\u001b[0m env1 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mduplicate() \u001b[39m# For action 1\u001b[39;00m\n\u001b[1;32m     15\u001b[0m env2 \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mduplicate() \u001b[39m# For action 2\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/envs/sim_kube_env.py:80\u001b[0m, in \u001b[0;36mSimKubeEnv.duplicate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mduplicate\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     76\u001b[0m     \u001b[39m# Copy the class ifself, but should be separated from the original one\u001b[39;00m\n\u001b[1;32m     77\u001b[0m     \u001b[39m# This is to prevent the original one from being modified\u001b[39;00m\n\u001b[1;32m     78\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mcopy\u001b[39;00m \u001b[39mimport\u001b[39;00m deepcopy\n\u001b[0;32m---> 80\u001b[0m     new_env \u001b[39m=\u001b[39m SimKubeEnvCopy(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreward_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscenario_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_node, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcpu_pool, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmem_pool, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdebug)\n\u001b[1;32m     81\u001b[0m     new_env\u001b[39m.\u001b[39mcluster \u001b[39m=\u001b[39m deepcopy(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcluster)\n\u001b[1;32m     82\u001b[0m     new_env\u001b[39m.\u001b[39mtime \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime\n",
+      "File \u001b[0;32m~/Documents/coding/thesis/PROMES_colab/notebook/../kube_sim_gym/envs/sim_kube_env_copy.py:43\u001b[0m, in \u001b[0;36mSimKubeEnvCopy.__init__\u001b[0;34m(self, reward_file, scenario_file, n_node, cpu_pool, mem_pool, debug)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreward \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     42\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdone \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobservation_space \u001b[39m=\u001b[39m gym\u001b[39m.\u001b[39;49mspaces\u001b[39m.\u001b[39;49mBox(low\u001b[39m=\u001b[39;49m\u001b[39m0.0\u001b[39;49m, high\u001b[39m=\u001b[39;49m\u001b[39m1.0\u001b[39;49m, shape\u001b[39m=\u001b[39;49m(n_node \u001b[39m*\u001b[39;49m \u001b[39m2\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m2\u001b[39;49m,), dtype\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49mfloat32)\n\u001b[1;32m     44\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_space \u001b[39m=\u001b[39m gym\u001b[39m.\u001b[39mspaces\u001b[39m.\u001b[39mDiscrete(n_node \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m     46\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_map \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mstandby\u001b[39m\u001b[39m'\u001b[39m}\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/kube-gym/lib/python3.8/site-packages/gym/spaces/box.py:81\u001b[0m, in \u001b[0;36mBox.__init__\u001b[0;34m(self, low, high, shape, dtype, seed)\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[39m# Boolean arrays which indicate the interval type for each coordinate\u001b[39;00m\n\u001b[1;32m     80\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbounded_below \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39minf \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlow\n\u001b[0;32m---> 81\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbounded_above \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49minf \u001b[39m>\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mhigh\n\u001b[1;32m     83\u001b[0m \u001b[39msuper\u001b[39m(Box, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mshape, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdtype, seed)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import tqdm\n",
     "\n",
@@ -1073,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,17 +1119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [01:03<00:00,  1.59it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tqdm\n",
     "import numpy as np\n",
@@ -1140,6 +1146,268 @@
     "                f.write(','.join(line) + '\\n')\n",
     "\n",
     "            state = next_state"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. DQfD data gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_step_3.py')\n",
+    "scheduler = SimHrScheduler(env, 'default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:04<00:00,  1.25it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tqdm\n",
+    "import numpy as np\n",
+    "\n",
+    "epochs = 5\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_dqfd.csv\")\n",
+    "\n",
+    "with open(data_path, 'a') as f:\n",
+    "    for i in tqdm.tqdm(range(epochs)):\n",
+    "        done = False\n",
+    "        state = env.reset()\n",
+    "        while not done:\n",
+    "            action = scheduler.decision(env)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "        \n",
+    "            line = state.tolist() + [action, reward]\n",
+    "\n",
+    "            line = list(map(lambda x: round(float(x), 2), line))\n",
+    "            line = list(map(str, line))\n",
+    "            # print(line)\n",
+    "            if len(line) == 14:\n",
+    "                f.write(','.join(line) + '\\n')\n",
+    "\n",
+    "            state = next_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14. Selective Expert data generate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load gym environment\n",
+    "import gym\n",
+    "from kube_sim_gym import *\n",
+    "from kube_sim_gym.envs.sim_kube_env import SimKubeEnv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kube_hr_scheduler.scheduler.sim_hr_scheduler import SimHrScheduler\n",
+    "from kube_hr_scheduler.strategies.model.default import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Path: /Users/swkim/Documents/coding/thesis/PROMES_colab/notebook/..\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make('SimKubeEnv-v0', reward_file='train_step_3.py')\n",
+    "scheduler = SimHrScheduler(env, 'default.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Count: 0\n",
+      "[1.   1.   1.   1.   1.   1.   1.   1.   1.   1.   0.01 0.19]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gl/n3l9mrsx1jz4xhb0rsxhj8980000gn/T/ipykernel_47952/914017129.py:14: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  state_cos_sim = np.dot(state_a, state_b) / (np.linalg.norm(state_a) * np.linalg.norm(state_b))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.   1.   0.99 0.81 1.   1.   1.   1.   1.   1.   0.16 0.1 ]\n",
+      "[1.   1.   0.99 0.81 0.84 0.9  1.   1.   1.   1.   0.3  0.24]\n",
+      "[1.   1.   0.99 0.81 0.84 0.9  0.7  0.76 1.   1.   0.03 0.15]\n",
+      "[0.97 0.85 0.99 0.81 0.84 0.9  0.7  0.76 1.   1.   0.09 0.19]\n",
+      "[0.97 0.85 0.99 0.81 0.84 0.9  0.7  0.76 0.91 0.81 0.29 0.12]\n",
+      "[0.97 0.85 0.99 0.81 0.55 0.78 0.7  0.76 0.91 0.81 0.24 0.16]\n",
+      "[0.73 0.69 0.99 0.81 0.55 0.78 0.7  0.76 0.91 0.81 0.05 0.07]\n",
+      "[0.73 0.69 0.99 0.81 0.55 0.78 0.7  0.76 0.86 0.74 0.   0.  ]\n",
+      "[0.73 0.69 0.99 0.81 0.55 0.78 0.7  0.76 0.86 0.74 0.2  0.08]\n",
+      "[0.73 0.69 0.79 0.73 0.55 0.78 0.7  0.76 0.86 0.74 0.18 0.11]\n",
+      "[0.73 0.69 0.61 0.62 0.55 0.78 0.7  0.76 0.86 0.74 0.03 0.21]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 48\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[39mprint\u001b[39m(state)\n\u001b[1;32m     47\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtime\u001b[39;00m \u001b[39mimport\u001b[39;00m sleep\n\u001b[0;32m---> 48\u001b[0m sleep(\u001b[39m3\u001b[39;49m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import tqdm\n",
+    "import numpy as np\n",
+    "\n",
+    "# epochs = 100\n",
+    "data_size = 1000000\n",
+    "data_path = os.path.join(base_path, \"dataset\", \"data_expert_selective.csv\")\n",
+    "\n",
+    "def cos_sim(a, b, thres):\n",
+    "    state_a = np.array(a[:12])\n",
+    "    action_a = np.array(a[12])\n",
+    "    state_b = np.array(b[:12])\n",
+    "    action_b = np.array(b[12])\n",
+    "\n",
+    "    state_cos_sim = np.dot(state_a, state_b) / (np.linalg.norm(state_a) * np.linalg.norm(state_b))\n",
+    "\n",
+    "    if abs(state_cos_sim - 1) < thres * 0.01 and action_a == action_b:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "with open(data_path, 'a') as f:\n",
+    "    data_count = 0\n",
+    "    while data_count < data_size:\n",
+    "        done = False\n",
+    "        state = env.reset()\n",
+    "        prev = np.zeros(26)\n",
+    "        while not done:\n",
+    "            if data_count % 1000 == 0:\n",
+    "                print(f\"Data Count: {data_count}\")\n",
+    "            action = scheduler.decision(env)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "\n",
+    "            line = state.tolist() + [action] + next_state.tolist() + [int(done)]\n",
+    "\n",
+    "            line = list(map(lambda x: round(float(x), 2), line))\n",
+    "            # Change action data type to int\n",
+    "            line[12] = int(line[12])\n",
+    "\n",
+    "            if len(line) == 26 and not cos_sim(prev, line, 5):\n",
+    "                f.write(','.join(list(map(str, line))) + '\\n')\n",
+    "                data_count += 1\n",
+    "                prev = line\n",
+    "\n",
+    "            state = next_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2])\n",
+    "b = np.array([1,2])\n",
+    "\n",
+    "np.dot(a, b)"
    ]
   },
   {
